# inception8

./: .gitignore  CMakeLists.txt  README  go.mod
cmake/: boost.cmake
inception_data/etc/: my.cnf
inception_scripts/: build.sh  init.sh  my.cnf.example  start.sh
include/: varlen_sort.h
sql/: CMakeLists.txt  sql_class.cc  sql_parse.cc  sys_vars.cc
sql/inception/: CMakeLists.txt  inception.cc  inception.h  inception_audit.cc  inception_audit.h  inception_backup.cc  inception_backup.h  inception_context.cc  inception_context.h  inception_exec.cc  inception_exec.h  inception_log.cc  inception_log.h  inception_parse.cc  inception_parse.h  inception_remote_sql.h  inception_result.cc  inception_result.h  inception_sysvars.cc  inception_sysvars.h  inception_tree.cc  inception_tree.h
sql/inception/doc/: DEV_GUIDE.md  OPS_GUIDE.md  README.md
sql/inception/tests/: conftest.py  run_tests.sh  test_config.ini  test_inception.py
